Refactor tests with assertThrows